tests/baselines/reference/parserErrorRecovery_ObjectLiteral3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral3.ts (2 errors) ====
    var v = { a: 
    return;
    ~~~~~~
!!! error TS1109: Expression expected.
          ~
!!! error TS1005: ':' expected.